--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teste-api-ebac",
   "version": "1.0.0",
-  "description": "",
+  "description": "-Node.js - Você encontra em: https://nodejs.org/en/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.6.0",
-    "joi": "^17.12.0"
+    "joi": "^17.13.1"
+  },
+  "devDependencies": {
+    "cypress": "^13.9.0"
   }
 }
